--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ body {
     font-family: monospace, helvetica, sans-serif;
     background-color: #222;
 }
-  
+
 .topnav {
     overflow: auto;
+    top: 1em;
     background-color: #444;
     display: flex;
     justify-content: space-between;
@@ -29,12 +30,12 @@ body {
     padding: 14px 16px;
     font-size: 17px;
 }
-  
+
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-  
+
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
@@ -44,13 +45,15 @@ body {
     margin: 1em;
 }
 
+
+
 footer {
-    position: fixed;
+    position: sticky;
     padding: 3px;
+    top: 500em;
     bottom: 1em;
     left: 1em;
     right: 1em;
-    width: -1em;
     background-color: #333;
     color: white;
     justify-content: space-between;
@@ -64,12 +67,14 @@ footer p {
     color: grey;
 }
 
-.links a, a:visited{
+.links a,
+a:visited {
     color: lightgrey;
     float: left;
 }
+
 .links a:hover {
-    color:grey;
+    color: grey;
     float: left;
 }
 
@@ -85,12 +90,13 @@ footer p {
 
 
 
-.blog a, a:visited {
-    color:grey;
+.blog a,
+a:visited {
+    color: grey;
 }
 
 .hyperlink1:hover {
-    color:darkgrey
+    color: darkgrey
 }
 
 .paragraph1 {
@@ -99,57 +105,59 @@ footer p {
 
 
 .blog {
-    width:90%;
+    width: 90%;
 }
 
 .collapsible {
-  background-color: #777;
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-family: monospace;
-  font-size: 15px;
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-family: monospace;
+    font-size: 15px;
 }
 
-.active-blog, .collapsible:hover {
-  background-color: #555;
+.active-blog,
+.collapsible:hover {
+    background-color: #555;
 }
 
 .collapsible:after {
-  content: '\002B';
-  color: white;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
 }
 
 .active-blog:after {
-  content: "\2212";
+    content: "\2212";
 }
 
 .content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  line-height: 1.5em;
-  background-color: #f1f1f1;
-  color: hsl(0, 0%, 30%);
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    line-height: 1.5em;
+    background-color: #f1f1f1;
+    color: hsl(0, 0%, 30%);
 }
 
 .content2 {
-  padding: 0 18px;
-  max-height: max-content;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  line-height: 1.5em;
-  background-color: #f1f1f1;
-  color: hsl(0, 0%, 30%);
+    padding: 0 18px;
+    max-height: max-content;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    line-height: 1.5em;
+    background-color: #f1f1f1;
+    color: hsl(0, 0%, 30%);
 }
+
 button {
     background-color: #04AA6D;
     border: none;
